Prevent scrollbars appearing on outermost container for the various palettes.

--- a/maqetta.core.client/WebContent/davinci/davinci.css
+++ b/maqetta.core.client/WebContent/davinci/davinci.css
@@ -52,6 +52,10 @@ BODY{
 	display:none;
 }
 
+#davinci_app .davinciPalette {
+	overflow:hidden;
+}
+	
 #davinci_app .dijitSplitterH {
 	height:4px;
 }
